# giga-new

./: .gitignore  .replit  README.md  app.py  db.sqlite  main.py  old.py  posts.db  pyproject.toml  requirements.txt  run.py  test.py
app/: app.py  db.sqlite  test_app.py
app/static/brython/: alert.bry
app/templates/: 404.html  base.html  edit.html  index.html  new_post.html  posts.html  signup.html  view.html
conf/: pyproject.toml
config/: pyproject.toml  requirements.txt
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  activate.fish  activate.xsh
src/: __init__.py  config.py  forms.py  models.py  routes.py
src/main/: routes.py
src/posts/: routes.py
src/routes/main/: __init__.py  routes.py
src/routes/posts/: __init__.py  forms.py  routes.py
src/routes/users/: __init__.py  forms.py  routes.py  utils.py
src/static/js/: script.js
src/templates/: about.html  base.html  home.html  layout.html  login.html  post.html  user_posts.html
src/users/: utils.py
static/js/: index.js
templates/: 404.html  base.html  edit.html  index.html  login.html  new_post.html  posts.html  view.html  view_person.html
