[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["AR_JPEG <araoudupi@gmail.com>"]
description = ""
name = "clonebook"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
flask-bcrypt = "^0.7.1"
flask-sqlalchemy = "^2.4"
python = "^3.7"
sqlalchemy = "^1.3"
[tool.poetry.dev-dependencies]
